# dimi

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: hello.rs
src/: instrument.rs  lib.rs  midi.rs  parse.rs
src/api/: connector.rs  instrument.rs
src/linux/: connector.rs  instrument.rs  linux.rs  midi.rs
src/midi/: control.rs  event.rs  message.rs  note.rs
src/platform/: packet.rs  platform.rs  unsupported.rs
