[package]
name = "dimi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Asynchronous library for interfacing with MIDI devices"
repository = "https://github.com/libcala/dimi"
documentation = "https://docs.rs/dimi"
homepage = "https://github.com/libcala/dimi/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "src/*"]
# TODO: eventually add no-std to category list
categories = ["asynchronous", "hardware-support", "multimedia", "multimedia::audio"]
keywords = ["audio", "realtime", "cross-platform", "midi", "record"]
readme = "README.md"

[dependencies.pasts]
version = "0.11"

# Use Smelling Salts on Linux
[target.'cfg(target_os="linux")'.dependencies.smelling_salts]
version = "0.5"

[target.'cfg(target_os="linux")'.dependencies.lookit]
version = "0.1"

[dependencies.flume]
version = "0.10"
default-features = false
features = ["async"]
