[package]
name = "dimi"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Asynchronous library for interfacing with MIDI devices"
repository = "https://github.com/libcala/dimi"
documentation = "https://docs.rs/dimi"
homepage = "https://github.com/libcala/dimi/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "src/*"]
# TODO: eventually add no-std to category list
categories = ["asynchronous", "hardware-support", "multimedia", "multimedia::audio"]
keywords = ["audio", "realtime", "cross-platform", "midi", "record"]
readme = "README.md"
rust-version = "1.66"

[dependencies.pasts]
version = "0.13"

[dependencies.smelling_salts]
version = "0.11"

[dependencies.lookit]
version = "0.2"

[dev-dependencies.async_main]
version = "0.3"
features = ["pasts"]
